--- a/Browser/DOM-Jira/raw/todo/index.html
+++ b/Browser/DOM-Jira/raw/todo/index.html
@@ -1,15 +1,21 @@
+<!-- ! -->
 <!DOCTYPE html>
 <html lang="en">
+<!-- seo -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Karantina:wght@300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
+    <!-- emmet -->
+    <!-- .input-container+.main-container>(p.action+ul.task-list>(li.task*3)) -->
     <div class="input-container">
         <input type="text" class="input-box">
     </div>
@@ -17,10 +23,12 @@
         <p class="action">Double click to delete</p>
         <ul class="task-list">
             <!-- li will be added here from user input -->
-            <li class="task">hello</li>
+            <!-- <li class="task">I am Task 1</li>
+            <li class="task">I am Task 2</li>
+            <li class="task">I am Task 3</li> -->
         </ul>
     </div>
-
     <script src="script.js"></script>
 </body>
+
 </html>
