--- a/Browser/Excel/activity/index.html
+++ b/Browser/Excel/activity/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="style.css">
     <title>Excel Clone</title>
 </head>
@@ -13,10 +14,10 @@
     <div class="menu-container">
 
         <select class="font-size">
-            <option value="8">8</option>
-            <option value="10">10</option>
-            <option value="12">12</option>
-            <option value="14">14</option>
+            <option value="16">16</option>
+            <option value="18">18</option>
+            <option value="20">20</option>
+            <option value="22">22</option>
         </select>
 
         <select class="font-family">
@@ -42,6 +43,20 @@
             <input type="color" class="color">
             <input type="color" class="bg-color">
         </div>
+        <!-- new open save -->
+        <div class="nos-container">
+            <span class="material-icons-outlined material-icons new">
+              add_circle_outline
+            </span>
+            <span class="material-icons-outlined material-icons">
+              folder_open
+            </span>
+            <input type="file" name="" class="open" />
+            <span class="material-icons-outlined material-icons save">
+              file_download
+            </span>
+          </div>
+          
     </div>
 
 
@@ -82,5 +97,6 @@
 
     <script src="grid.js"></script>
     <script src="script.js"></script>
+    <script src="newOpenSave.js"></script>
 </body>
 </html>
